correction text-align: center in portfilo.html

--- a/css/style.css
+++ b/css/style.css
@@ -356,7 +356,6 @@ body {
   max-width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
-  text-align: center;
   border: 1px solid #eeeeee;
 }
 
